Skapade skalet till 3 getfunktioner

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,1 +1,3 @@
-<button> Grym app </button>
+<button (click) = 'getDrinks()'> Kör metoden getDrinks() </button>
+<button (click) = 'getFood()'> Kör metoden getFood() </button>
+<button (click) = 'getMovies()'> Kör metoden getMovies() </button>
