Försök till Country

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,3 +1,6 @@
 <button (click) = 'getDrinks()'> Kör metoden getDrinks() </button>
 <button (click) = 'getFood()'> Kör metoden getFood() </button>
 <button (click) = 'getMovies()'> Kör metoden getMovies() </button>
+
+<app-drinks> [country]= "country" </app-drinks>
+
