Fixade så att det går att hämta JSON-info om en slumpad film, samt visa i html

--- a/app/src/app/movies/movies.component.html
+++ b/app/src/app/movies/movies.component.html
@@ -1,1 +1,5 @@
-<p>movies works!</p>
+<img src={{this.poster}}>
+<h4>{{this.movieTitle}} ({{this.year}})</h4>
+<p>Director: {{this.director}}</p>
+<p>Plot: "{{this.plot}}"</p>
+<p>IMDB rating: {{this.rating}}</p>
