Lista av cocktailnamn -> lista av cocktail-obj

--- a/app/src/app/drinks/drinks.component.html
+++ b/app/src/app/drinks/drinks.component.html
@@ -1,2 +1,2 @@
-<p>Drinktips: </p>
-<p>    {{ cocktail.name }} – {{ cocktail.instruction }}</p>
+<p>Cocktails:</p>
+<p> {{ cocktail.name }} – {{cocktail.instruction}} </p>
