--- a/app/src/app/food/food.component.html
+++ b/app/src/app/food/food.component.html
@@ -1,3 +1,6 @@
-<DisplayDish [dish]="chosenDish"></DisplayDish>
-<button (click)='randomizeDish()'> Slumpa om maträtt </button>
-<button (click)='toggleFetchMode()'> Hämtar data från: {{mode? "API":"Cache"}} </button>
+<div style="background-color: gray;">
+    <p>Food Component</p>
+    <DisplayDish [dish]="chosenDish"></DisplayDish>
+    <button (click)='randomizeDish()'> Slumpa om maträtt </button>
+    <button (click)='toggleFetchMode()'> Hämtar data från: {{mode? "API":"Cache"}} </button>
+</div>
