--- a/app/src/app/food/display-alternatives/display-alternatives.component.html
+++ b/app/src/app/food/display-alternatives/display-alternatives.component.html
@@ -1,5 +1,3 @@
 <p>display-alternatives works!</p>
-<p>En rätt i alternatives: {{dishesOnDisplay[0].title}}</p>
-<p>En annan rätt i alternatives: {{dishes[0].title}}</p>
 
-<DisplayDish [dish] = dishes[0]></DisplayDish>
+<DisplayDish [dish] = dishes[0]></DisplayDish>  <!-- *ngfor googla -->
