--- a/app/src/app/food/display-dish/display-dish.component.html
+++ b/app/src/app/food/display-dish/display-dish.component.html
@@ -1,5 +1,5 @@
-<div style="background-color: lightgray; max-width: 250px; margin: 45px;">
-    <p>Vald rätt: {{dish.title}}</p>
+<div style="background-color: lightgray; max-width: 250px;">
+    <p>{{dish.title}}</p>
     <p>Betyg: {{dish.spoonacularScore}}/100</p>
     <p>Tid: {{dish.readyInMinutes}} minuter</p>
     <a href={{dish.sourceUrl}} target="'_blank'">Länk till recept</a>
