--- a/app/src/app/food/food.component.html
+++ b/app/src/app/food/food.component.html
@@ -1,6 +1,9 @@
 <div style="background-color: gray;">
     <p>Food Component</p>
-    <DisplayDish [dish]="chosenDish"></DisplayDish>
-    <button (click)='randomizeDish()'> Slumpa om maträtt </button>
-    <button (click)='toggleFetchMode()'> Hämtar data från: {{mode? "API":"Cache"}} </button>
+    <div>
+        <p>Vald maträtt: </p>
+        <DisplayDish [dish]="chosenDish"></DisplayDish>
+        <button (click)='randomizeDish()'> Slumpa om maträtt </button>
+        <button (click)='toggleFetchMode()'> Hämtar data från: {{mode? "API":"Cache"}} </button>
+    </div>
 </div>
