Display Alternatives (empty)

--- a/app/src/app/food/display-alternatives/display-alternatives.component.html
+++ b/app/src/app/food/display-alternatives/display-alternatives.component.html
@@ -1,1 +1,7 @@
-<p>display-alternatives works!</p>
+<div>
+    <ul>
+        <li *ngFor="let item of alternatives">
+            <DisplayDish [dish]="item"></DisplayDish>
+        </li>
+    </ul>
+</div>
