Byt till alternativ

--- a/app/src/app/food/food.component.html
+++ b/app/src/app/food/food.component.html
@@ -1,4 +1,3 @@
-
 <div style="background-color: gray;">
     <p>Food Component</p>
     <div>
@@ -9,6 +8,10 @@
     </div>
     <div>
         <p>Alternativ</p>
+        <button (click)='randomiseAlternatives(3)'> Slumpa om alternativ </button>
+        <button (click)='switchToAlternative(0)'> Byt till alternativ 1 </button>
+        <button (click)='switchToAlternative(1)'> Byt till alternativ 2 </button>
+        <button (click)='switchToAlternative(2)'> Byt till alternativ 3 </button>
         <DisplayAlternatives [alternatives]="chosenAlternatives"></DisplayAlternatives>
     </div>
 </div>
