--- a/app/src/app/food/display-dish/display-dish.component.html
+++ b/app/src/app/food/display-dish/display-dish.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: lightgray; max-width: 250px;">
+<div style="background-color: lightgray; min-width: 300; min-height: 300px; width: 300px; height: 300px;">
     <p>{{dish.title}}</p>
     <p>Betyg: {{dish.spoonacularScore}}/100</p>
     <p>Tid: {{dish.readyInMinutes}} minuter</p>
