subcomponents added to drink

--- a/app/src/app/drinks/drinks.component.html
+++ b/app/src/app/drinks/drinks.component.html
@@ -1,2 +1,2 @@
-<p>Cocktails:</p>
-<p> {{ cocktail.name }} – {{cocktail.instruction}} </p>
+<p>Drinks:</p>
+<p> {{ drink.name }} – {{drink.instruction}} </p>
