--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -3,4 +3,5 @@
 <button (click)='getMovies()'> Kör metoden getMovies() </button>
 
 <app-drinks> [country]= "country" </app-drinks>
+<app-movies></app-movies>
 <FoodComponent [cuisine]="correctCountry"></FoodComponent>
