--- a/app/src/app/movies/display-selected-movie/display-selected-movie.component.html
+++ b/app/src/app/movies/display-selected-movie/display-selected-movie.component.html
@@ -1,8 +1,7 @@
 <div style="background-color: lightgray; min-width: 300; min-height: 300px; width: 300px; height: 300px;">
-    <img src={{movie.poster}} style="max-width: 150px;">
-    <p>{{movie.title}} ({{movie.year}})</p>
-    <p>Regissör: {{movie.director}}</p>
-    <p>Handling: "{{movie.plot}}"</p>
-    <p>Betyg: {{movie.rating}}/10</p>
+    <img src={{movie.Poster}} style="max-height: 150px;">
+    <p>{{movie.Title}} ({{movie.Year}})</p>
+    <p>Regissör: {{movie.Director}}</p>
+    <p>Betyg: {{movie.Rating}}/10</p>
     <!--<a href="https://www.imdb.com/title/$({{movie.id}})" target="'_blank"> Kolla in på IMDB</a>-->
 </div>
