Routing working for drink

--- a/app/src/app/drinks/display-drink/display-drink.component.html
+++ b/app/src/app/drinks/display-drink/display-drink.component.html
@@ -1,1 +1,4 @@
-<p>display-drink works!</p>
+<div style="background-color: lightgray; min-width: 300; min-height: 300px; width: 300px; height: 300px;">
+    <p>{{drink.name}}</p>
+    <p>Betyg: {{drink.instruction}}</p>
+</div>
