--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -2,7 +2,7 @@
 <button (click)='getFood()'> Kör metoden getFood() </button>
 <button (click)='getMovies()'> Kör metoden getMovies() </button>
 
-<app-drinks> [country]= "country" </app-drinks>
+
 <nav>
     <ul>
         <li>
@@ -10,6 +10,9 @@
         </li>
         <li>
             <a [routerLink]="['/food', correctCountry]">Länk till FoodComponent</a>
+        </li>
+        <li>
+            <a [routerLink]="['/drinks', correctCountry]">Länk till Drinks</a>
         </li>
     </ul>
 </nav>
