--- a/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
+++ b/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
@@ -1,1 +1,10 @@
-<p>display-drink-alternatives works!</p>
+<div>
+    <ul>
+        <li *ngFor="let item of alternatives" style="display: inline-block;">
+            <div style="margin: 10px;">
+                <DisplayDrinkComponent [drink]="item"></DisplayDrinkComponent>
+            </div>
+
+        </li>
+    </ul>
+</div>
