Select Country on landingpage

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -9,6 +9,9 @@
             <a [routerLink]="['']">Länk till Landing</a>
         </li>
         <li>
+            <a [routerLink]="['/overview']">Länk till Overview</a>
+        </li>
+        <li>
             <a [routerLink]="['/food', correctCountry]">Länk till FoodComponent</a>
         </li>
     </ul>
