Overview recieves country

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -9,7 +9,7 @@
             <a [routerLink]="['']">Länk till Landing</a>
         </li>
         <li>
-            <a [routerLink]="['/overview']">Länk till Overview</a>
+            <a [routerLink]="['/overview', correctCountry]">Länk till Overview</a>
         </li>
         <li>
             <a [routerLink]="['/food', correctCountry]">Länk till FoodComponent</a>
