--- a/app/src/app/landing/landing.component.html
+++ b/app/src/app/landing/landing.component.html
@@ -6,6 +6,6 @@
       </option>
     </select>
     <div>
-        <p>Valt land: {{chosenCountry}}</p>
+        <button [routerLink]="['/overview', chosenCountry]">Bekräfta val</button>
     </div>
 </div>
