--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,13 +1,13 @@
 <nav>
     <ul>
         <li>
-            <a mat-stroked-button [routerLink]="['']">Länk till Landing</a>
+            <a mat-stroked-button [routerLink]="['']">Home (reset)</a>
         </li>
         <li>
-            <a mat-stroked-button [routerLink]="['/overview', correctCountry]">Länk till Overview</a>
+            <a mat-stroked-button [routerLink]="['/overview', correctCountry]">Overview</a>
         </li>
         <li>
-            <a mat-stroked-button [routerLink]="['/food', correctCountry]">Länk till FoodComponent</a>
+            <a mat-stroked-button [routerLink]="['/food', correctCountry]">Food</a>
         </li>
     </ul>
 </nav>
