Funkar nu att skriva ut mainDryck och dryckalt.

--- a/app/src/app/drinks/display-drink/display-drink.component.html
+++ b/app/src/app/drinks/display-drink/display-drink.component.html
@@ -1,4 +1,4 @@
 <div style="background-color: lightgray; min-width: 300; min-height: 300px; width: 300px; height: 300px;">
     <p>{{drink.name}}</p>
-    <p>Betyg: {{drink.instruction}}</p>
+    <p>{{drink.instruction}}</p>
 </div>
