--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -10,7 +10,7 @@
             <a mat-stroked-button [routerLink]="['/food', correctCountry]">Food</a>
         </li>
         <li>
-            <a mat-mat-stroked-button [routerLink]="['/drinks', correctCountry]">Drinks</a>
+            <a mat-stroked-button [routerLink]="['/drinks', correctCountry]">Drinks</a>
         </li>
     </ul>
 </nav>
