App gets country from landingpage

--- a/app/src/app/landing/landing.component.html
+++ b/app/src/app/landing/landing.component.html
@@ -10,6 +10,6 @@
     </mat-form-field>
 
     <div>
-        <button mat-raised-button color="primary" (click)="submit()">Bekräfta val</button>
+        <button mat-raised-button color="primary" (click)="submitCountry()">Bekräfta val</button>
     </div>
 </div>
