--- a/app/src/app/food/display-alternatives/display-alternatives.component.html
+++ b/app/src/app/food/display-alternatives/display-alternatives.component.html
@@ -3,7 +3,7 @@
         <li *ngFor="let item of alternatives" style="display: inline-block;">
             <div style="margin: 10px;">
                 <DisplayDish [dish]="item"></DisplayDish>
-                <button (click)='switchChosenDish(item.id)'>Byt till alternativ</button>
+                <button mat-stroked-button style="margin-top: 25px;" (click)='switchChosenDish(item.id)'>Byt till alternativ</button>
             </div>
 
         </li>
