routing o länk för movies

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -15,6 +15,9 @@
                 <li>
                     <a mat-stroked-button disabled>Drinks</a>
                 </li>
+                <li>
+                    <a mat-stroked-button disabled>Movies</a>
+                </li>
             </ul>
 
         </div>
@@ -34,6 +37,9 @@
                 </li>
                 <li>
                     <a mat-stroked-button [routerLink]="['/drinks', correctCountry]">Drinks</a>
+                </li>
+                <li>
+                    <a mat-stroked-button [routerLink]="['/movies', correctCountry]">Movies</a>
                 </li>
             </ul>
 
