fixade input av country och visningen av imdb-rating

--- a/app/src/app/movies/display-selected-movie/display-selected-movie.component.html
+++ b/app/src/app/movies/display-selected-movie/display-selected-movie.component.html
@@ -2,6 +2,6 @@
     <img src={{movie.Poster}} style="max-height: 150px;">
     <p>{{movie.Title}} ({{movie.Year}})</p>
     <p>Regissör: {{movie.Director}}</p>
-    <p>Betyg: {{movie.Rating}}/10</p>
+    <p>Betyg: {{movie.imdbRating}}/10</p>
     <!--<a href="https://www.imdb.com/title/$({{movie.id}})" target="'_blank"> Kolla in på IMDB</a>-->
 </div>
