--- a/app/src/app/movies/movies.component.html
+++ b/app/src/app/movies/movies.component.html
@@ -7,7 +7,7 @@
     <p>Movies Component</p>
     <div>
         <p>Vald film: </p>
-        <DisplaySelectedMovie [movie]="chosenMovie"></DisplaySelectedMovie>
+        <DisplaySelectedMovie [movie]="chosenMovie" style="display: block;margin-left: auto;margin-right: auto;width: 50%;"></DisplaySelectedMovie>
         <!--<button (click)='randomizeDish()'> Slumpa om maträtt </button>
         <button (click)='toggleFetchMode()'> Hämtar data från: {{mode? "API":"Cache"}} </button>-->
     </div>
