--- a/app/src/app/drinks/drinks.component.html
+++ b/app/src/app/drinks/drinks.component.html
@@ -1,6 +1,6 @@
 <div style="background-color: gray;">
     <p>Drink Component</p>
-    <div>
+    <div align="center">
         <p>Vald Dryck: </p>
         <DisplayDrinkComponent [drink]="mainDrink"></DisplayDrinkComponent>
     </div>
