--- a/app/src/app/drinks/display-drink/display-drink.component.css
+++ b/app/src/app/drinks/display-drink/display-drink.component.css
@@ -1,7 +1,7 @@
 .example-card {
     max-width: 400px;
-    max-height: 500px;
-    /*min-width: 100px;
+    /*max-height: 500px;
+    min-width: 100px;
     min-height: 100px;*/
     margin-bottom: 50px;
     margin-top: 50px;
@@ -13,13 +13,14 @@
     padding: 18px;
 }
 
-.mat-card-image {
+.image{
+    height: 350px;  
+    object-fit: contain;
+  }
+
+  /*
+  .mat-card-image {
     width: calc(100% + 36px);
     height: calc(100% + 36px); 
     margin: 0 -24px 16px -18px;
-}
-
-.image{
-    height: 350px; /* adjust as needed */
-    object-fit: contain;
-  }
+} */
