Fixat till ingredienser och measurements samt laggt till randomknappar

--- a/app/src/app/drinks/display-drink/display-drink.component.html
+++ b/app/src/app/drinks/display-drink/display-drink.component.html
@@ -1,10 +1,29 @@
 <mat-card class="example-card">
     <mat-card-title>{{drink.name}}</mat-card-title>
     <mat-card-content>
-        <!--<li *ngfor></li>--->
-        <p>Ingredienser: {{drink.ingredients}}</p>
-        <p>{{drink.measurements}}</p>
+        <mat-grid-list cols="2" rowHeight="20px" >
+            <div *ngFor="let ing of drink.ingredients; let i = index;">
+                <mat-grid-tile style="text-align:left">{{ drink.measurements[i] }} {{ ing }}</mat-grid-tile>
+            </div>
+        </mat-grid-list>       
     </mat-card-content>
     <img class="image" mat-card-image src={{drink.img_url}}>
 </mat-card>
 
+
+        <!--
+        <mat-list *ngFor="let ing of drink.ingredients; let i = index;" >
+            <mat-list-item>{{ drink.measurements[i] }} {{ ing }}</mat-list-item>
+            <mat-divider></mat-divider>
+        </mat-list>
+        -->   
+        <!--
+        <ul>
+            <li *ngFor="let ing of drink.ingredients; let i = index;" >
+                {{ drink.measurements[i] }} {{ ing }}
+            </li>
+        </ul>
+
+        <p>Ingredienser: {{drink.ingredients}}</p>
+        <p>{{drink.measurements}}</p>
+        -->
