Lagt till drink i Overview
Just nu får vi felmeddelande då drink loadar en senare än den ska. Förmodligen är drinks för långsam

--- a/app/src/app/overview/overview.component.html
+++ b/app/src/app/overview/overview.component.html
@@ -1,3 +1,4 @@
 <p>Förslag till {{countryDisplay}}</p>
 
 <DisplayDish [dish] = "chosenDish"> </DisplayDish>
+<DisplayDrinkComponent [drink] = "mainDrink"> </DisplayDrinkComponent>
