--- a/app/src/app/food/display-dish/display-dish.component.html
+++ b/app/src/app/food/display-dish/display-dish.component.html
@@ -1,4 +1,4 @@
-<mat-card class="dish-card">
+<mat-card class="display-card">
     <mat-card-title>{{dish.title}}</mat-card-title>
     <mat-card-content>
         <p>Betyg: {{dish.spoonacularScore}}/100</p>
