--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -48,7 +48,8 @@
     </mat-toolbar>
 
 
-
-    <router-outlet></router-outlet>
+    <div class="router">
+      <router-outlet></router-outlet>
+    </div>
     <!--<FoodComponent [cuisine]="correctCountry"></FoodComponent> -->
 </mat-sidenav-container>
