fixade localstorage + fetcha chosenMovie från overview/landing

--- a/app/src/app/overview/overview.component.html
+++ b/app/src/app/overview/overview.component.html
@@ -2,3 +2,4 @@
 
 <DisplayDish [dish] = "chosenDish"> </DisplayDish>
 <DisplayDrinkComponent [drink] = "mainDrink"> </DisplayDrinkComponent>
+<DisplaySelectedMovie [movie] = "chosenMovie"> </DisplaySelectedMovie>
