--- a/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
+++ b/app/src/app/drinks/display-drink-alternatives/display-drink-alternatives.component.html
@@ -1,21 +1,9 @@
 <mat-grid-list cols="3" rowHeight="3:4">
-    <mat-grid-tile>
-        <DisplayDrinkComponent [drink]="alternatives[0]"></DisplayDrinkComponent>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <DisplayDrinkComponent [drink]="alternatives[1]"></DisplayDrinkComponent>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <DisplayDrinkComponent [drink]="alternatives[2]"></DisplayDrinkComponent>
-    </mat-grid-tile>
-</mat-grid-list>
-  
-<!--<div>
     <ul>
-        <li *ngFor="let item of alternatives" style="display: inline-block;">
-            <mat-grid-list cols="4" rowHeight="100px">
+        <li *ngFor="let item of alternatives; let i = index">
+            <mat-grid-tile>
                 <DisplayDrinkComponent [drink]="item"></DisplayDrinkComponent>
-            
+                <button mat-stroked-button style="margin-top: 25px;" (click)='switchMainDrink(item.name)'>Byt till alternativ</button>
+            </mat-grid-tile>
         </li>
     </ul>
-</div> --->
