--- a/app/src/app/drinks/drinks.component.html
+++ b/app/src/app/drinks/drinks.component.html
@@ -6,8 +6,11 @@
         <DisplayDrinkComponent [drink]="mainDrink"></DisplayDrinkComponent>
     </div>
     <div>
-        <p>Alternativ</p>
-        <button mat-stroked-button (click)='getRandomAlternativies(3)'> Slumpa nya alternativ </button>
-        <DisplayDrinkAlternatives [alternatives]="dispDrinkAlt"></DisplayDrinkAlternatives>
+        <mat-card>
+                <mat-card-title>Alternativ</mat-card-title>
+                <button mat-stroked-button (click)='getRandomAlternativies(3)'> Slumpa nya alternativ </button>
+                <DisplayDrinkAlternatives [alternatives]="dispDrinkAlt" (newDrinkEvent)=switchMainDrink($event)></DisplayDrinkAlternatives>
+        </mat-card>
+            
     </div>
 </div>
