--- a/app/src/app/drinks/drinks.component.html
+++ b/app/src/app/drinks/drinks.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: gray;">
+<div>
     <p>Drink Component</p>
     <div align="center">
         <p>Kvällens Dryckförslag: </p>
